src/objects/Account_Mandate__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <externalId>true</externalId>
        <label>Account No</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <label>Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Account Mandates</relationshipLabel>
        <relationshipName>Account_Mandates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Added_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Mandates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Mandate</label>
    <nameField>
        <label>Account Mandate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Mandates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>